# contactsapp

./: .pre-commit-config.yaml  pyproject.toml
contacts/: factories.py  forms.py  managers.py  models.py  urls.py  views.py  widgets.py
contacts/management/commands/: generate_contacts.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_email.py
contacts/templates/contacts/: archive_ui.html  create.html  detail.html  edit.html  form_error.html  index.html  indicator.html  list.html  new.html  update.html
contacts/templates/contacts/widgets/: email_htmx_widget.html
contactsapp/: settings.py  urls.py
contactsapp/templates/contactsapp/: base.html
