[tool.poetry]
name = "contactsapp"
version = "0.1.0"
description = "hypermedia.systems demo app built with Django"
authors = ["Daniel Nieto <danielnieto89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
djlint = "^1.34.1"
ruff = "^0.1.9"
pre-commit = "^3.6.0"
factory-boy = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"
